--- a/styles.css
+++ b/styles.css
@@ -168,3 +168,22 @@ footer p {
     line-height: 1.6;
     margin-bottom: 15px;
 }
+
+.gallery {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.gallery img {
+    max-width: 100%;
+    height: auto;
+}
+
+/* Additional styles for mobile devices */
+@media screen and (max-width: 600px) {
+    .gallery {
+        flex-direction: column;
+        align-items: center;
+    }
+}
