--- a/styles.css
+++ b/styles.css
@@ -180,10 +180,10 @@ footer p {
     height: auto;
 }
 
-/* Additional styles for mobile devices */
 @media screen and (max-width: 600px) {
     .gallery {
         flex-direction: column;
         align-items: center;
+        zoom: 200;
     }
 }
