--- a/styles.css
+++ b/styles.css
@@ -67,10 +67,8 @@ nav a {
     display: block; /* Show navigation when button is hovered */
 }
 
-/* Section Styles */
-
-section {
-    padding: 2em;
+.section h2 {
+    text-align: center;
 }
 
 /* Footer Styles */
@@ -96,14 +94,16 @@ footer p {
 }
 
 /* Gallery Styles */
+
 .gallery {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding: 1em;
 }
 
 .gallery img {
-    width: 25%; /* Adjust the width as needed */
+    width: 20%; /* Adjust the width as needed */
     margin-bottom: 1em;
     transition: transform 0.3s ease-in-out; /* Add a smooth transition for the zoom effect */
 }
@@ -169,19 +169,24 @@ footer p {
     margin-bottom: 15px;
 }
 
-.gallery {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
 .gallery img {
     max-width: 100%;
     height: auto;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
     .gallery {
-       scale: 200%;
+        display: flex;
+        flex-direction: column;
+        align-items: center; /* Optional: Center the images horizontally */
     }
+    .gallery .img {
+        width: 100%; /* Make images fill the entire width of the container */
+        margin-bottom: 1em;
+        transition: transform 0.3s ease-in-out; /
+    }
+    .gallery img:hover {
+    transform: scale(1.3); /* Zoom in on hover */
 }
+    }
+
