--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* styles.css */
-
 /* General Styles */
 body {
     font-family: 'Arial', sans-serif;
@@ -8,14 +6,15 @@ body {
     background-color: #111;
     color: #fff;
 }   
-/* Header Styles */
+
 header {
-    background-color: #333;
+    background-color: transparent;
     text-align: center;
     padding: 1em;
+    background: linear-gradient(to bottom, rgba(51, 51, 51, 0), #333);
 }
-
-/* Navigation Styles */
+   
+    /* Navigation Styles */
 nav {
     background-color: #444;
     padding: 1em;
@@ -46,7 +45,7 @@ nav a {
 }
 
 .toggle-btn:hover {
-    background-color: #777; /* Darker color on hover */
+    background-color:   #333; /* Darker color on hover */
 }
 
 .toggle-btn:focus {
@@ -66,11 +65,6 @@ nav a {
 .toggle-btn:hover + nav {
     display: block; /* Show navigation when button is hovered */
 }
-
-.section h2 {
-    text-align: center;
-}
-
 footer {
     background-color: transparent;
     text-align: center;
@@ -115,7 +109,6 @@ footer p {
     transform: scale(1.3); /* Zoom in by 10% on hover */
 }
 
-
 .modal {
     display: none;
     position: fixed;
@@ -131,7 +124,7 @@ footer p {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #fff;
+    background-color: white;
     padding: 20px;
     border-radius: 5px;
     /* Additional CSS styles for customization */
@@ -148,19 +141,17 @@ footer p {
     right: 10px;
     font-size: 20px;
     cursor: pointer;
-    /* Additional CSS styles for customization */
     color: #ff0000; /* Close button color */
     font-weight: bold;
 }
 
-/* Additional CSS styles for customization */
 #aboutModal h2 {
     color: #007BFF; /* Heading color */
 }
 
 #aboutModal p {
-    line-height: 1.6; /* Adjust the line height of paragraphs */
-    margin-bottom: 15px; /* Add space between paragraphs */
+    line-height: 1.6; /
+    margin-bottom: 15px; 
 }
 
 #contactsModal h2 {
