--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,26 @@
 /*styles*/
 
+@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');  /*Font Awesome stylesheet*/
+
+header {
+    background-color: transparent;
+    text-align: left;
+    font-family: 'Bitter', sans-serif;
+    font-weight: 100;
+    padding-left: .5em;
+    background: linear-gradient(to bottom, rgba(51, 51, 51, 0), #333);
+    height: fit-content;
+    h1, p {
+        margin: 0;
+        padding: 0; 
+    }
+
+    p {
+        margin-top: 5px; 
+        margin-bottom: 5px; 
+    }
+}
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -8,22 +29,14 @@ body {
     color: #fff;
 }   
 
-header {
-    background-color: transparent;
-    text-align: center;
-    padding: 1em;
-    background: linear-gradient(to bottom, rgba(51, 51, 51, 0), #333);
-}
-   
 nav {
     background-color: #444;
     padding: 1em;
     text-align: center;
     display: none; /* Initially hidden */
     position: absolute;
-    width: 100%;
+    width: 30%;
     border-radius: 5px;
-
 }
 
 nav a {
@@ -82,8 +95,13 @@ footer::before {
 }
 
 /* Gallery Styles */
-section {
+
+section h2 {
     text-align: center;
+    font-family: 'Bitter', sans-serif;
+    font-weight: 100;
+    font-size: 35px;
+    text-decoration: underline;
 }
 
 .gallery {
