--- a/styles.css
+++ b/styles.css
@@ -197,3 +197,8 @@ section h2 {
     .gallery img:hover {
     transform: scale(3.5); 
     }
+    nav {
+        display: flex;
+        flex-direction: column;
+        align-items: left;
+    }
