--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /*styles*/
 
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100&display=swap');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');  /*Font Awesome stylesheet*/
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
 
 header {
     background-color: transparent;
@@ -33,7 +33,7 @@ nav {
     background-color: #444;
     padding: 1em;
     text-align: center;
-    display: none; /* Initially hidden */
+    display: none; 
     position: absolute;
     width: 30%;
     border-radius: 5px;
@@ -59,12 +59,12 @@ nav a {
 }
 
 .toggle-btn::before {
-    content: "\2630"; /* Unicode hamburger icon */
+    content: "\2630"; /* Unicode hamburger */
     margin-right: 5px;
 }
 
 .toggle-btn::after {
-    content: "\2715"; /* Unicode close icon */
+    content: "\2715"; /* Unicode close */
     margin-right: 5px;
 }
 
@@ -77,7 +77,7 @@ nav a {
 }
 
 .toggle-btn::after{
-    content: "\2715"; /* Unicode close icon on hover */
+    content: "\2715"; /* Unicode close icon  */
     display: none;
 }
 
@@ -119,17 +119,18 @@ section h2 {
 }
 
 .gallery img {
-    width: 20%; /* Adjust the width as needed */
+    width: 20%;
     margin-bottom: 1em;
     margin-top: 1em;
-    transition: transform 0.3s ease-in-out; /* Add a smooth transition for the zoom effect */
+    transition: transform 0.3s ease-in-out;
 }
 
 .gallery img:hover {
-    transform: scale(1.3); /* Zoom in by 10% on hover */
+    transform: scale(1.3); 
 }
 
 /*modal for about and contact*/
+
 .modal {
     display: none;
     position: fixed;
