--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ section h2 {
     font-family: 'Bitter', sans-serif;
     font-weight: 100;
     font-size: 35px;
-    text-decoration: underline;
+    text-decoration: overline, underline;
 }
 
 .gallery {
@@ -206,6 +206,6 @@ section h2 {
     }
     
     #mainNav a {
-        margin: 10px 0; /* Add spacing between vertical items */
+        margin: 30px 0; /* Add spacing between vertical items */
     }
 }
