--- a/styles.css
+++ b/styles.css
@@ -207,7 +207,7 @@ section h2 {
         color: #fff;
         text-decoration: underline;
         padding: auto;
-        margin: 10px, 10px;
+        margin: 10px, 10px, 0, 0,;
     }
 }
     
