--- a/styles.css
+++ b/styles.css
@@ -196,15 +196,17 @@ section h2 {
         transition: transform 0.3s ease-in-out; /
     }
     .gallery img:hover {
-        transform: scale(3.5); 
+    transform: scale(3.5); 
     }
 
-    .mainNav {
+    #mainNav {
         flex-direction: column; 
         align-items: flex-start;
     }
     .mainNav .a {
+        color: #fff;
         text-decoration: underline;
+        padding: 1em;
     }
 }
     
