--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,10 @@ nav {
     text-align: center;
     display: none; 
     position: absolute;
-    width: 30%;
-    border-radius: 5px;
+    justify-content: left;
+    flex-direction: row;
+
+
 }
 
 nav a {
@@ -197,16 +199,6 @@ section h2 {
     }
     .gallery img:hover {
     transform: scale(3.5); 
-    }
-
-    #mainNav {
-        flex-direction: column; 
-        align-items: flex-start;
-    }
-    #mainNav .a {
-        color: #fff;
-        text-decoration: underline;
-        margin-top: 5px;   
     }
 }
     
