--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ body {
     font-family: 'Bitter', sans-serif;
     display: flex;
     align-items: center;
+    margin-left: -1em;
 }
 .toggle-button:hover {
     color: cornflowerblue;
