--- a/style.css
+++ b/style.css
@@ -7,10 +7,15 @@
 }
 body {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: baseline;
     min-height: 100vh;
-    background: #212121;
+    background: rgb(66,63,111);
+    background: linear-gradient(90deg, rgba(66,63,111,1) 0%, rgba(155,237,254,1) 18%, rgba(43,43,43,1) 21%); 
+    max-width: 256px;
+    padding-left: 100px;
+    padding-top: 200px;
+    overflow: hidden;
 }
 
 .container {
@@ -41,7 +46,7 @@ body {
     top: 0;left: 0;
     height: 100%;
     width: 100%;
-    border: 1px solid #1da1f2;
+    border: 1px solid ;
     border-radius: 5px;
     opacity: 1;
     transition: 0.3s;
@@ -171,7 +176,7 @@ body {
 }
 
 .pic i {
-    background-color: #00000033;
+    background-color:  rgba(66,63,111,1;
 }
 
 .username a {
