--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     background: rgb(66,63,111);
     background: linear-gradient(90deg, rgba(66,63,111,1) 0%, rgba(155,237,254,1) 18%, rgba(43,43,43,1) 21%); 
     max-width: 256px;
-    padding-left: 110px;
+    padding-left: 140px;
     padding-top: 200px;
 }
 
@@ -186,14 +186,8 @@ body {
     font-family: monospace;
 }
 
-@media screen {
+@media only screen and (max-width: 600px) {
     body {
-        display: flex;
-        justify-content: left;
-        align-items: baseline;
-        min-height: 100vh;
-        background: rgb(66,63,111);
-        max-width: 256px;
-        padding-left: 110px;
-        padding-top: 200px;
-}}
+      background-color: lightblue;
+    }
+  }
