--- a/styles.css
+++ b/styles.css
@@ -180,12 +180,12 @@ section h2 {
     margin-bottom: 15px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px)(max-height:100vh) {
+    
     .gallery {
         display: flex;
         flex-direction: column;
         align-items: center; 
-        width: auto;
     }
     .gallery .img {
         width: 100%;
