--- a/styles.css
+++ b/styles.css
@@ -184,8 +184,9 @@ section h2 {
     
     .gallery {
         display: flex;
-        flex-direction: column;
-        align-items: center; 
+        flex-direction: row;
+        align-items: flex-start;
+        gap: 25px;
     }
     .gallery .img {
         width: 100%;
