--- a/styles.css
+++ b/styles.css
@@ -104,18 +104,13 @@ section h2 {
 .gallery {
     display: flex;
     justify-content: space-around;
-    flex-wrap: nowrap;
-    padding: 1em;
-    flex: 1;
+    flex-wrap: nowrap
+    padding: 2em;
+    flex: 2;
 }
 
 .gallery img {
-    max-width: 100%;
-    height: auto;
-}
-
-.gallery img {
-    width: 20%;
+    width: 15%;
     margin-bottom: 1em;
     margin-top: 1em;
     transition: transform 0.3s ease-in-out;
@@ -191,7 +186,7 @@ section h2 {
         transition: transform 0.3s ease-in-out; /
     }
     .gallery img:hover {
-    transform: scale(1.5); 
+    transform: scale(3); 
     }
 }
     
