--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ header {
     font-weight: 100;
     padding-left: .5em;
     background: linear-gradient(to bottom, rgba(51, 51, 51, 0), #333);
-    height: fit-content;
+    height: auto;
     h1, p {
         margin: 0;
         padding: 0; 
@@ -20,7 +20,7 @@ header {
         margin-top: 5px; 
         margin-bottom: 5px; 
     }
-    outline-color:invert;
+    outline-color:white;
     outline-width: thin;
     outline-style: groove;
 
@@ -96,7 +96,7 @@ section h2 {
     font-family: 'Bitter', sans-serif;
     font-weight: 100;
     font-size: 35px;
-    outline-color:invert;
+    outline-color:white;
     outline-width: thin;
     outline-style: groove;
 }
