--- a/styles.css
+++ b/styles.css
@@ -217,9 +217,14 @@ section h2 {
     margin-bottom: 10px; /
 }
 
-/* #canvas {
-    border: 1px solid darkslategrey;
-    
-} */
+#canvas {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    height: 450px;
+
+}
 
 @media only screen and (max-width: 600px) {}
