--- a/styles.css
+++ b/styles.css
@@ -217,13 +217,12 @@ section h2 {
     margin-bottom: 10px; /
 }
 
-#canvas {
+#mycanvas {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 600px;
-    height: 450px;
+    width: 300px;
+    height: 300px;
+    
+   
 
 }
 
