--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ section h2 {
 
 .gallery img:hover {
     transform: scale(1.3);
-    transform: translateY(-1em); 
+    transform: translateY(-1em);
 }
 .artwork-container {
     text-align: center;
@@ -221,10 +221,10 @@ section h2 {
     position: absolute;
     width: 300px;
     height: 300px;
-    padding: 1em;
-    
-   
-
 }
 
+
 @media only screen and (max-width: 600px) {}
+.gallery img:hover {
+    transform: scale(2.5);
+}
