--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/*styles*/
-
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
 
@@ -11,6 +9,7 @@ header {
     padding-left: .5em;
     background: linear-gradient(to bottom, rgba(51, 51, 51, 0), #333);
     height: auto;
+    outline-color: #333;
     h1, p {
         margin: 0;
         padding: 0; 
@@ -20,11 +19,8 @@ header {
         margin-top: 5px; 
         margin-bottom: 5px; 
     }
-    outline-color:white;
-    outline-width: thin;
-    outline-style: groove;
-
 }
+
 
 body {
     font-family: 'Arial', sans-serif;
@@ -32,6 +28,10 @@ body {
     padding: 0;
     background-color: #111;
     color: #fff;
+    outline-color: #111;
+    outline-style: inset;
+    outline-width: 1em;
+    
 }   
 
 .toggle-button {
@@ -84,27 +84,27 @@ body {
 footer {
     background-color: transparent;
     text-align: left;
-    padding-top: 1em;
     width: 100%;
+    font-family: 'Bitter', sans-serif;
+    
 }
 
 footer::before {
-    content: "\00a0"; /* Add a non-breaking space to create some space */
+    content: "\00a0"; 
     display: block;
-    height: 80px; 
+    height: 40px; 
     background: linear-gradient(to bottom, rgba(51, 51, 51, 0), #333);
 }
-
-/* Gallery Styles */
 
 section h2 {
     text-align: center;
     font-family: 'Bitter', sans-serif;
     font-weight: 100;
     font-size: 35px;
-    outline-color:white;
+    outline-color: #333;
     outline-width: thin;
     outline-style: groove;
+    background: linear-gradient(to top, rgba(51, 51, 51, 0), #333);
 }
 
 .gallery {
@@ -141,8 +141,6 @@ section h2 {
     font-family: monospace;
     font-size: 25px;
     opacity: .5;
-
-/*modal for about and contact*/
 }
 
 .modal {
@@ -209,11 +207,10 @@ section h2 {
     left: 50%;
     transform: translate(-50%,-25%);
     width: 150px;
-    height: 150px;
-    
+    height: 150px;  
 }
 
 @media only screen and (max-width: 600px) {}
-.gallery img:hover {
-    transform: scale(1.5);
+    .gallery img:hover {
+    transform: scale(1.2);
 }
