--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ section h2 {
 .gallery img {
     width: 75%;
     margin-bottom: 2em;
-    transition: transform 0.7s ease-in-out;
+    transition: transform 0.5s ease-in-out;
 }
 
 
@@ -203,11 +203,11 @@ section h2 {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-25%);
-    width: 150px;
-    height: 150px;  
+    width: 200px;
+    height: 200px;  
 }
 
-@media only screen and (max-width: 600px) {}
+@media only screen and (max-width: 600px) {
     .gallery img:hover {
-    transform: scale(2.0);
-}
+    transform: scale(2.5);
+}}
