--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@ section h2 {
     font-family: 'Arial', sans-serif;
     max-width: 600px; 
     margin: 0 auto; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .close {
@@ -203,9 +203,10 @@ section h2 {
     position: relative;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-25%);
-    width: 200px;
-    height: 200px;  
+    transform: translate(-50%,-10%);
+    width: 300px;
+    height: 300px;
+    background: url('/backgrounds/smallgoth.jpg');
 }
 
 @media only screen and (max-width: 600px) {
