--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,9 @@ section h2 {
     text-align: center; 
     margin-bottom: 10px; /
 }
+#imageContainer {
+    display: none;
+}
 
 #mycanvas {
     position: relative;
