--- a/styles.css
+++ b/styles.css
@@ -203,11 +203,12 @@ section h2 {
 }
 
 #mycanvas {
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-10%);
-    background: url('/backgrounds/smallgoth.jpg');
+    transform: translate(-50%, +150%);
+
+    
 }
 
 @media only screen and (max-width: 600px) {
