--- a/styles.css
+++ b/styles.css
@@ -205,9 +205,10 @@ section h2 {
     position: relative;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -35%);
+    transform: translate(-50%, -10%);
     align-items: center;
-    border: inset 1px grey;
+    /* border: 1px solid yellowgreen; */
+    background: url(/backgrounds/600432back.png);
 }
 
 @media only screen and (max-width: 600px){}
