--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,8 @@ footer {
 
 }
 footer h1 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+    font-size: x-large;
     background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
     /* color: transparent; */
 }
