--- a/styles.css
+++ b/styles.css
@@ -89,9 +89,8 @@ footer {
 }
 footer h1 {
     text-align: center;
-    font-size: x-large;
     background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
-    /* color: transparent; */
+    color: transparent;
 }
 
   footer::before {
