--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100&display=swap');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
+/* @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css'); */
 
 header {
     background-color: transparent;
@@ -7,7 +7,7 @@ header {
     font-family: 'Bitter', sans-serif;
     font-weight: 100;
     padding-left: .5em;
-    background: linear-gradient(to bottom, rgba(51, 51, 51, 0), #333);
+    background: linear-gradient(to left, rgba(51, 51, 51, 0), #333);
     height: auto;
     outline-color: #333;
     outline-width: thin;
@@ -93,7 +93,7 @@ footer h1 {
     color: transparent;
 }
 
-  footer::before {
+footer::before {
     content: "\00a0"; 
     display: block;
     height: 40px; 
@@ -123,7 +123,7 @@ section h2 {
 
 .gallery img {
     width: 75%;
-    margin-bottom: 2em;
+    margin-bottom: 5em;
     transition: transform 0.5s ease-in-out;
 }
 
@@ -143,7 +143,7 @@ section h2 {
     font-size: 25px;
     opacity: .5;
 } */
-
+/* 
 .modal {
     display: none;
     position: fixed;
@@ -176,9 +176,9 @@ section h2 {
     font-size: 20px;
     cursor: pointer;
     color: #ff0000; /* Close button color */
-    font-weight: bold;
-}
-
+    /* font-weight: bold;
+} */
+/* 
 #aboutModal h2 {
     color: #007BFF;
 }
@@ -195,7 +195,8 @@ section h2 {
 #contactsModal p {
     line-height: 1.6;
     margin-bottom: 15px;
-}
+} */
+*/
 
 .artwork-container {
     text-align: center; 
