--- a/styles.css
+++ b/styles.css
@@ -114,95 +114,29 @@ div h2 {
 
 .gallery {
     display: flex;
-    justify-content: space-around;
-    flex-wrap: nowrap;
-    padding: 1em;
+    justify-content: center;
+
     outline-style: hidden;
     background: transparent;
+    margin-bottom: 6em;
+}
+.artwork-container {
+    display: flex;
+
 }
 
 .gallery img {
-    width: 75%;
-    margin-bottom: 5em;
+    margin: 2em;
+    width: 35%;
+    max-width: 200px;
     transition: transform 0.5s ease-in-out;
 }
 
-
 .gallery img:hover {
-    transform: translateY(-1em);
-    opacity: .4;
+    transform: translateY(-2em);
+    opacity: 0.5;
 }
 
-/* .artwork-container p {
-    display: none; 
-}
-
-.artwork-container:hover p {
-    display: block;
-    color: #ff0000;
-    font-family: monospace;
-    font-size: 25px;
-    opacity: .5;
-} */
-/* 
-.modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
-.modal-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    color: #333; 
-    font-family: 'Arial', sans-serif;
-    max-width: 600px; 
-    margin: 0 auto; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
-    cursor: pointer;
-    color: #ff0000; /* Close button color */
-    /* font-weight: bold;
-} */
-/* 
-#aboutModal h2 {
-    color: #007BFF;
-}
-
-#aboutModal p {
-    line-height: 1.6;
-    margin-bottom: 15px; 
-}
-
-#contactsModal h2 {
-    color: #007BFF;
-}
-
-#contactsModal p {
-    line-height: 1.6;
-    margin-bottom: 15px;
-} */
-*/
-
-.artwork-container {
-    text-align: center; 
-    margin-bottom: 10px; /
-}
 #imageContainer {
     display: none;
 }
