--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,12 @@ div h2 {
     opacity: 1.0;
     
 }
+#Hi {
+    position: relative;
+    align-items: center;
+    transform: translateY(-125px);
+}
+
 
 #imageContainer {
     display: none;
