--- a/styles.css
+++ b/styles.css
@@ -161,10 +161,11 @@ div h2 {
 }
 
 .containerstats {
-    display: flex;
+   
     align-items: center;
     flex-direction: column;
-    max-width: 600px;
+    margin-right: 15px;
+    transform: translateY(+1em);
   }
 
   label {
