--- a/styles.css
+++ b/styles.css
@@ -161,15 +161,15 @@ div h2 {
 }
 
 .containerstats {
-   
+    display: none;
     align-items: center;
     flex-direction: column;
     margin-right: 15px;
-    transform: translateY(+1em);
+    transform: translateY(+5em);
   }
 
   label {
-    display: block;
+    /* display: block; */
     margin-bottom: 10px;
   }
 
