--- a/styles.css
+++ b/styles.css
@@ -168,19 +168,19 @@ div h2 {
     transform: translateY(+5em);
   }
 
-  label {
+label {
     /* display: block; */
     margin-bottom: 10px;
   }
 
-  input, select {
+input, select {
     width: 100%;
     padding: 8px;
     margin-bottom: 15px;
     box-sizing: border-box;
   }
 
-  button {
+button {
     background-color: #4CAF50;
     color: white;
     padding: 10px 15px;
@@ -190,7 +190,17 @@ div h2 {
     margin: 2px;
   }
 
-  button:hover {
+button:hover {
     background-color: #45a049;
   }
-@media only screen and (max-width: 600px){}
+
+#catMenuA {
+    display: flex;
+    align-items: center;
+    flex-direction: column-reverse;
+    transform: translateY(-2em)
+
+    
+
+}  
+  @media only screen and (max-width: 600px){}
