--- a/styles.css
+++ b/styles.css
@@ -44,12 +44,27 @@ footer h1 {
     background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
     color: transparent;
 }
+footer p2 {
+
+    font-size: 5px;
+}
 
 footer::before {
     content: "\00a0"; 
     display: block;
     height: 40px; 
     background: linear-gradient(to bottom, rgba(51, 51, 51, 0), #333);
+}
+#mute {
+    transform: translateY(-200px);
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 2px;
+
 }
 
 div h2 {
@@ -100,20 +115,6 @@ div h2 {
     align-items: center;
 
 }
-
-/* button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin: 2px;
-}
-
-button:hover {
-    background-color: #45a049;
-} */
 
 #catMenuA {
     display: none;
