--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,8 @@ body {
     color: #fff;
     outline-width: 1em;
     outline-style: hidden;
-    overflow-y: scroll;    
+    overflow-y: scroll;
+ 
 }   
 
 footer {
@@ -105,13 +106,16 @@ div h2 {
     display: none;
     margin: 0;
     padding: 0;
+    border: none;
+    position: absolute;
 }
 
 #mycanvas {
     display: block;
     position: relative;
-    width: 100%;
-    max-width: 750px;
+    max-width: 600px;
+    max-height: 600px;
+    width: 95%;
 
 }
 
