--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100&display=swap');
-
+* {
+    margin: 0;
+    padding: 0;
+}
 header {
     background-color: transparent;
     justify-content: center;
@@ -12,6 +15,7 @@ header {
     outline-color: #333;
     outline-width: thin;
     outline-style: groove;
+    max-width: 600px;
     h1, p {
         margin: 0;
         padding: 0;
@@ -24,6 +28,10 @@ header {
 }
 
 body {
+    
+    display: flex;
+    flex-direction: column;
+    align-content: center;
     font-family: 'Arial', sans-serif;
     margin: 1;
     background-color: black;
@@ -31,6 +39,7 @@ body {
     outline-width: 1em;
     outline-style: hidden;
     overflow-y: scroll;
+    max-width: 600px;
  
 }   
 
