--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100&display=swap');
-* {
-    margin: 0;
-    padding: 0;
-}
+
 header {
     background-color: transparent;
     justify-content: center;
@@ -124,7 +121,8 @@ div h2 {
     position: relative;
     max-width: 600px;
     max-height: 600px;
-    width: 95%;
+    width: 100%;
+    height: 100%;
 
 }
 
