--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ header {
     font-family: 'Bitter', sans-serif;
     font-weight: 100;
     padding-left: .5em;
-    background: linear-gradient(to left, rgba(51, 51, 51, 0), #333);
+    background: linear-gradient(to top, rgba(51, 51, 51, 0), #333);
     height: auto;
     outline-color: #333;
     outline-width: thin;
