--- a/styles.css
+++ b/styles.css
@@ -5,41 +5,34 @@
 }
 header {
     background-color: transparent;
-    justify-content: center;
     text-align: center;
     font-family: 'Bitter', sans-serif;
     font-weight: 100;
     padding-left: .5em;
     background: linear-gradient(to top, rgba(51, 51, 51, 0), #333);
-    height: auto;
     outline-color: #333;
     outline-width: thin;
     outline-style: groove;
-    max-width: 600px;
+    max-width: 432px;
+    border-radius: 1%;
     h1, p {
-        margin: 0;
-        padding: 0;
+        margin: 3px;
     }
-
-    p {
-        margin-top: 5px; 
-        margin-bottom: 5px; 
+    h1 {
+        margin-top: 10px;
     }
 }
 
 body {
-    
     display: flex;
     flex-direction: column;
     align-content: center;
     font-family: 'Arial', sans-serif;
-    margin: 2px;
     background-color: black;
     color: #fff;
-    outline-width: 1em;
-    outline-style: hidden;
     overflow-y: scroll;
     max-width: max-content;
+    margin-left: 2px;
 }   
 header h2 {
     text-align: center;
@@ -47,7 +40,6 @@ header h2 {
     color: transparent;
     opacity: .7;
     transform: translateX(-4px);
-
 }
 
 footer {
