--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
     overflow-y: scroll;
     max-width: max-content;
     margin-left: 2px;
+    margin-top: 2px;
 }   
 header h2 {
     text-align: center;
