--- a/styles.css
+++ b/styles.css
@@ -66,16 +66,14 @@ footer::before {
     background: linear-gradient(to bottom, rgba(51, 51, 51, 0), #333);
 }
 #mute {
-    /* transform: translateY(-100px); */
-    background-color: #4CAF50;
+    transform: translateY(+20px);
+    background-color:darkblue;
     color: white;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     margin: 2px;
-    display: none;
-
 }
 
 div h2 {
