--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100&display=swap');
 * {
     opacity: 0.99;
-
 }
 header {
     background-color: transparent;
@@ -55,9 +54,9 @@ footer h1 {
     margin: 2px;
     display: none;
 }
-footer p2 {
+footer p {
     
-    font-size: 5px;
+    font-size: 6px;
 }
 
 footer::before {
